[package]
name = "fizer"
version = "1.0.0"
description = "fizer is a tool for making specific size files"
readme = "README.md"
repository = "https://github.com/TheJeme/fizer"
license = "MIT"
keywords = ["file"]
categories = ["filesystem"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
